--- a/style.css
+++ b/style.css
@@ -51,6 +51,10 @@ main {
     cursor: pointer;
 }
 
+.btn:hover{
+    bord: 2px 2px #333;
+}
+
 .btn-container button:nth-child(4),
 button:nth-child(8),
 button:nth-child(12),
